fix: form workflow status visible in mobile view

--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -40,9 +40,9 @@ body {
 		}
 
 		.page-title .indicator {
-			position: absolute;
-    		left: 5px;
-			margin-top: 12px;
+			float: left;
+			margin-top: 10px;
+			margin-right: 5px;
 		}
 
 
@@ -228,9 +228,9 @@ body {
 				width: calc(~"100% - 90px");
 			}
 			.indicator {
-				float: left;
-				margin-top: 10px;
-				margin-right: 5px;
+				position: absolute;
+				top: 25px;
+				margin: 0;
 			}
 		}
 	}
